# rls-finder

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
rlscout/: __init__.py  agent.py  cli.py  enumerate.py  envfile.py  http.py  ratelimit.py  recon.py  report.py  rls.py  scope.py
rlscout/wordlists/: default.txt
scripts/: check_local_supabase.py
supabase/migrations/: 0001_rls_states.sql
tests/: test_agent.py  test_cli.py  test_core.py  test_enumerate.py  test_http.py  test_recon.py  test_report.py  test_rls.py  test_scope.py
tests/integration/: README.md  docker-compose.yml  nginx.conf  run_integration.py  seed.sql
tests/integration/www/: .gitkeep
